app/assets/stylesheets/application.scss
$orange: #E96856;
html {
  font-family: "neue-haas-unica", sans-serif;
  font-weight: 400;
  background-color: #f7f3f0;
}

body {
  max-width: 40rem;
  margin: auto;
  line-height: 1.5rem;
  font-size: 1.25rem;
}

html, body {
  padding: 0.5rem;
}

@media screen and (min-width: 480px) { 
  html, body {
    padding: 1.5rem;
  }
}

img {
	max-width: 100%;
}

h1, h2, h3, h4 {
  line-height: 1.25;
}

h1 {
  font-size: 3rem;
  font-weight: 900; // Unica Extra Black
}

h2 {
  font-size: 2rem;
}

h3, .sub-title { 
  font-size: 1.5rem;
}

h1, h2, h3, h4, p {
  margin-top: 0;
  margin-bottom: 1.5rem;
}

.lead {
  font-size: 1.5rem;
  line-height: 1.25;
}

p > strong {
  font-weight: 600; // Unica Bold, as opposed to heavy
}

figcaption {
  font-size: 1rem;
  line-height: 1.25rem;
  font-style: italic;
}



section {
  padding: 1.5rem 0;
  border-top: 5px solid $orange;
}

a {
	color: $orange;
  text-decoration-color: $orange;

	&.silent {
		color: inherit;
		text-decoration: none;
	}

	&.quiet {
		color: inherit;
		text-decoration: none;

		&:hover {
			color: $orange;
			text-decoration: underline;
		}
	}

  &.underline {
    color: inherit;
    &:hover {
			color: $orange;
    }
  }

}

a[href^="http"] {
	text-decoration: underline dotted;
}

blockquote p {
  font-style: italic;
}

@import "header";
@import "posts";
@import "indiemark";
@import "link_previews";


.turbolinks-progress-bar {
  height: 5px;
  background-color: $orange;
}

.print-only { display: none }

